# quantify-scheduler

./: .codacy.yaml  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE_NOTES.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.ci/: Dockerfile  vanilla-thin.Dockerfile
.gitlab/issue_templates/: Defect.md  Feature.md
.gitlab/merge_request_templates/: Default.md  General.md  New release.md
docker/unix/: Dockerfile_python37  Dockerfile_python38  Dockerfile_python39  Dockerfile_python_latest
docker/windows/: Dockerfile_python37  Dockerfile_python38  Dockerfile_python39  Dockerfile_python_latest
docs/: Makefile  acquisition_protocols.md  api_reference.rst  bibliography.rst  compilation_backends.md  compilation_backends.rst  concepts_terminology.rst  conf.py  index.md  index.rst  installation.md  installation.rst  make.bat  nitpick-exceptions.txt  quantify_compilers.md  refs.bib  usage.rst  user_guide.md  user_guide.rst
docs/_static/: quantify_scheduler.css
docs/examples/: UML_class_diagrams.md  deprecated.md  structure.DataStructure.rst  structure.DataStructure.rst.py
docs/notebooks/: newResources.ipynb
docs/source/: conf.py  index.md  nitpick-exceptions.txt  refs.bib  user_guide.md  zhinst_qcodes_objects.inv  zhinst_toolkit_objects.inv
docs/source/dev/: index.md
docs/tutorials/: Acquisitions.md  Compiling to Hardware.md  Compiling to Hardware.rst.py  Hello World.md  Operations and Qubits.md  Operations and Qubits.rst.py  Running an Experiment.md  ScheduleGettable.md  Schedules and Pulses.md  Schedules and Pulses.rst.py  Tutorial 1 scheduler concepts.rst  Tutorial 1. Schedules and pulses.rst.py  Tutorial 1. basic experiment.rst  Tutorial 1. basic experiment.rst.py  Tutorial 2. basic experiment.rst.py  Tutorial 3. Compilation and hardware execution.rst.py  Tutorial 5. Operations and Qubits.rst.py  Tutorial_NV_DarkESR.md
frozen_requirements/: frozen-requirements-0.10.0.txt  frozen-requirements-0.10.1.txt  frozen-requirements-0.11.0.txt  frozen-requirements-0.11.1.txt  frozen-requirements-0.12.0.txt  frozen-requirements-0.12.1.txt  frozen-requirements-0.12.2.txt  frozen-requirements-0.12.3.txt  frozen-requirements-0.13.0.txt  frozen-requirements-0.14.0.txt  frozen-requirements-0.15.0.txt  frozen-requirements-0.16.0.txt  frozen-requirements-0.16.1.txt  frozen-requirements-0.17.0.txt  frozen-requirements-0.17.1.txt  frozen-requirements-0.18.1.txt  frozen-requirements-0.18.2.txt  frozen-requirements-0.19.0.txt  frozen-requirements-0.21.0.txt  frozen-requirements-0.21.1.txt  frozen-requirements-0.5.1.txt  frozen-requirements-0.5.2.txt  frozen-requirements-0.6.0.txt  frozen-requirements-0.7.0.txt  frozen-requirements-0.8.0.txt  frozen-requirements-0.9.0.txt  frozen-requirements.txt
quantify/: __init__.py
quantify/scheduler/: __init__.py  acquisition_library.py  compilation.py  enums.py  frontends.py  gate_library.py  json_utils.py  math.py  measurement_library.py  pulse_library.py  resources.py  types.py  waveforms.py
quantify_scheduler/: __init__.py  _version.py  acquisition_library.py  compatibility_check.py  compilation.py  enums.py  frontends.py  gate_library.py  gettables.py  gettables_profiled.py  json_utils.py  math.py  profiled_gettables.py  pulse_compensation.py  pulse_library.py  resources.py  types.py  waveforms.py  yaml_utils.py
quantify_scheduler/backends/: __init__.py  circuit_to_device.py  circuit_to_device_backend.py  corrections.py  device_compile.py  distortions.py  graph_compilation.py  qblox_backend.py  zhinst_backend.py
quantify_scheduler/controlstack/: __init__.py  station.py
quantify_scheduler/device_elements/: transmon_element.py
quantify_scheduler/device_under_test/: __init__.py  composite_square_edge.py  device_element.py  edge.py  hardware_config.py  mock_setup.py  nv_element.py  quantum_device.py  spin_edge.py  spin_element.py  sudden_nz_edge.py  transmon_element.py
quantify_scheduler/helpers/: __init__.py  collections.py  deprecation.py  diagnostics_report.py  generate_acq_channels_data.py  importers.py  inspect.py  mock_instruments.py  qblox_dummy_instrument.py  schedule.py  time.py  validators.py  waveforms.py
quantify_scheduler/instrument_coordinator/: __init__.py  instrument_coordinator.py  utility.py
quantify_scheduler/operations/: __init__.py  acquisition_library.py  composite_factories.py  control_flow_library.py  gate_library.py  measurement_factories.py  measurement_generators.py  nv_native_library.py  operation.py  pulse_compensation_library.py  pulse_factories.py  pulse_generators.py  pulse_library.py  shared_native_library.py  spin_library.py  stitched_pulse.py
quantify_scheduler/qblox/: __init__.py
quantify_scheduler/schedules/: __init__.py  schedule.py  spectroscopy_schedules.py  timedomain_schedules.py  trace_schedules.py  two_qubit_transmon_schedules.py  verification.py
quantify_scheduler/schemas/: __init__.py  operation.json  resource.json  schedulable.json  schedule.json  transmon_cfg.json
quantify_scheduler/structure/: __init__.py  model.py  types.py
quantify_scheduler/visualization/: __init__.py  circuit_diagram.py  constants.py  pulse_diagram.py  pulse_scheme.py
tests/: __init__.py  conftest.py  test_headers_and_copyright.py  test_init_imports.py
tests/baseline_qblox_assembly/: AllXY_qrm0_seq0_instr.json  Readout calibration q0, [0, 1]_qrm0_seq0_instr.json  acq_protocol_append_mode_ssro_cluster0_module4_seq0_instr.json  acq_protocol_average_mode_allxy_cluster0_module4_seq0_instr.json  assigning_waveform_indices_cluster0_module2_seq0_instr.json  sched-looped-acq_qrm0_seq0_instr.json
tests/data/: hwconfig_with_qcm_rf.yaml  qdevice_with_basic_nv_element.yaml  qdevice_with_two_qubits_new_format.json  qdevice_with_two_qubits_old_format.json
tests/fixtures/: generic.py  mock_setup.py  qcodes_utilities.py  schedule.py  static.py
(+357 files in other folders)
