[build-system]
requires = ["setuptools>=66.1"]
build-backend = "setuptools.build_meta"

[project]
name = "quantify-scheduler"
description="""\
    Quantify-scheduler is a Python package for writing quantum programs featuring \
    a hybrid gate-pulse control model with explicit timing control.\
"""
maintainers = [
    {name = "Edgar Reehuis", email = "ereehuis@qblox.com"},
    {name = "Robert Sokolewicz", email = "rsokolewicz@qblox.com"},
    {name = "Amirtha Varshiny Arumugam", email = "amirthavarshiny@orangeqs.com"},
    {name = "Viacheslav Ostroukh", email = "viacheslav@orangeqs.com"},
    {name = "Gábor Oszkár Dénes", email = "gdenes@qblox.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "quantum",
    "quantify",
]
license = { text = "BSD-3-Clause" }
dynamic = ["version", "readme"]
requires-python = ">=3.8"
dependencies = [
    "columnar",
    "dataclasses-json",
    "fastjsonschema",
    "jinja2>=3.1.2", # pandas requires version 3.1.2 or newer
    "matplotlib",
    "networkx",
    "numpy",
    "pandas[output_formatting]",
    "pathvalidate",
    "plotly",
    "pydantic>=2.0",
    "qblox-instruments>=0.12.0,<0.14.0", # Prevent upgrade upon minor release while allowing for installing patch releases
    "quantify-core>=0.7.1", # For the fix (!438) in quantify_core.utilities.general.without()
    "qcodes>=0.32.0", # 0.32.0: introduces InstrumentModule
    "scipy",
    "xxhash",

    # We are using rich in our tutorials
    "rich[jupyter]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

docs = [
    # astroid only added to prevent to sphinx-autoapi error AttributeError: 'Module' object has no attribute 'doc' (!838)
    # (solvable by sphinx-autoapi>=3, see https://stackoverflow.com/q/77257145, but requires sphinx>=6.2 while latest myst-nb-0.17.2 requires sphinx<6)
    "astroid<3.0",
    "jupyter_sphinx>=0.4.0",
    "jupytext",
    "sphinx",
    "pydata-sphinx-theme",
    "myst-nb",
    "hvplot",
    "pylint",
    "rich[jupyter]",
    "scanpydoc<0.12", # 0.12.0 and 0.12.1 parse return type in docstrings incorrectly. see also https://github.com/theislab/scanpydoc/issues/120.
    "sphinx-autoapi",
    "sphinx-autodoc-typehints", # required by either sphinx.ext.autodoc or sphinx.ext.napoleon
    "sphinx-design",
    "sphinx-jsonschema",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "quantify_scheduler[zhinst]",

]

dev = [
    "black",
    "coverage",
    'eval-type-backport; python_version < "3.9"', # Required for type checking in Python 3.8
    "pre-commit",
    "pre-commit-hooks", # common hooks for git repos
    "prospector",
    "pyright!=1.1.309",  # Version excluded because of a bug (https://github.com/microsoft/pyright/issues/5126).
    # Pytest-cov is used to generage test coverage reports, which is rather a development than testing requirement
    "pytest-cov",
    "pytest-xdist", # run tests in parallel
    "ruff",  # linter
    "quantify-scheduler[docs,test]",
    # Live rebuild of Documentation
    "sphinx-autobuild",
    "quantify_scheduler[zhinst]",
]

zhinst = [
    "zhinst==21.8.20515; python_version<'3.10'",
    "zhinst-qcodes==0.1.4; python_version<'3.10'",
    "zhinst-toolkit==0.1.5; python_version<'3.10'",
]

[project.urls]
"Documentation" = "https://quantify-os.org/docs/quantify-scheduler/"
"Source" = "https://gitlab.com/quantify-os/quantify-scheduler"
"Issue tracker" = "https://gitlab.com/quantify-os/quantify-scheduler/-/issues"
"Changelog" = "https://gitlab.com/quantify-os/quantify-scheduler/-/blob/main/CHANGELOG.md"
"Slack" = "https://join.slack.com/t/quantify-hq/shared_invite/zt-1nd78r4e9-rbWdna53cW4DO_YbtMhVuA"
"Authors" = "https://gitlab.com/quantify-os/quantify-scheduler/-/blob/main/AUTHORS.md"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["quantify_scheduler", "quantify_scheduler.*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.ruff]
line-length = 100 # Needs to be >=88 for compat with black, increasing to prevent ruffness
lint.select = [
    "F",  # pyflakes
    "E",  # pycodestyle
    "W",  # pycodestyle
    "D",  # pydocstyle
    "I",  # isort
    "N",  # flake8-naming
    "UP", # pyupgrade
    "TID",  # flake8-tidy-imports
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "Q", #flake8-quotes
    "ARG", #flake8-unused-arguments
    "ANN",  # flake8-annotations
    #Pylint (PLC, PLE, PLR, PLW)
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    #numpy 2.0 migration
    "NPY201"
]

# ignore:
# D105: Missing docstring in magic method
# D107: Missing docstring in `__init__` (it should be completely absent in our convention)
# D203: 1 blank line required before class docstring
# D212: Multi-line docstring summary should start at the first line
# D401: Docstrings should be in imperative mood
# D413: Missing blank line after last section
# E741:   Ambiguous variable name
# N806:   Variable `...` in function should be lowercase
# PLR0913: Too many arguments to function call (.../5)
# A003: Class attribute `compile` is shadowing a python builtin
# ANN101: Missing type annotation for `self` in method
# PLR2004: Magic value used in comparison, consider replacing `...` with a constant variable
lint.ignore = ["D105", "D107", "D203", "D212", "D401", "D413", "E741", "N806", "PLR0913", "A003", "ANN101", "PLR2004"]
extend-exclude = [
    "docs",
]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["path_I", "path_Q", "offset_path_I", "offset_path_Q"]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["D", "ANN"]
"conftest.py" = ["D"]
"tests" = ["D"]

# - E402: Module level import not at top of file
# - F401: Multiple imports on one line

"zhinst_backend.py" = ["E402"]
"zhinst.py" = ["E402"]
"*/docs/source/conf.py" = ["E402", "F401"]
"__init__.py" = ["F401", "D104", "D205", "D415", "D400"]
"tests/**/*.py" = ["D", "ANN", "F401"]
"*.py" = ["D205"] # this should still be refactored.

# All files below are temporarily excluded explicitly and expected to be gradually turned into ruff-compliancy
"quantify_scheduler/backends/mock/mock_rom.py" = ['ANN401', 'E501', 'SIM118', 'TCH001', 'UP006', 'UP007', 'W291', 'D101', 'D102', 'D103', 'ARG002']
"quantify_scheduler/_static_version.py" = ['UP009']
"quantify_scheduler/_version.py" = ['ANN001', 'ANN202', 'N801', 'PLR0912', 'SIM105', 'UP032']
"quantify_scheduler/backends/circuit_to_device.py" = ['ANN001', 'ANN202', 'ANN204', 'I001', 'PLR0912', 'TCH001', 'UP006']
"quantify_scheduler/backends/corrections.py" = ['E501', 'I001', 'SIM118']
"quantify_scheduler/backends/graph_compilation.py" = ['ANN001', 'ANN003', 'ANN201', 'ANN202', 'ANN204', 'TCH001', 'TCH002', 'UP006', 'UP007']
"quantify_scheduler/backends/qblox/compiler_abc.py" = ['ANN001', 'ANN202', 'ANN204', 'ANN401', 'E501', 'F821', 'I001', 'SIM108', 'TCH001', 'TCH003']
"quantify_scheduler/backends/qblox/compiler_container.py" = ['ANN102', 'ANN201', 'ANN204']
"quantify_scheduler/backends/qblox/constants.py" = ['E501']
"quantify_scheduler/backends/qblox/driver_version_check.py" = ['ANN201']
"quantify_scheduler/backends/qblox/helpers.py" = ['ANN001', 'ANN201', 'ANN202', 'ANN204', 'ANN401', 'E501', 'PLR0912', 'PLR0915', 'PLR5501', 'SIM105', 'SIM118']
"quantify_scheduler/backends/qblox/instrument_compilers.py" = ['ANN001', 'ANN202', 'ANN204', 'ARG002', 'E501', 'SIM102', 'TCH003']
"quantify_scheduler/backends/qblox/operation_handling/acquisitions.py" = ['ANN201', 'ANN202', 'ANN204', 'ARG002', 'SIM102', 'TCH001', 'UP006', 'UP007']
"quantify_scheduler/backends/qblox/operation_handling/base.py" = ['ANN201', 'I001', 'TCH001', 'UP006']
"quantify_scheduler/backends/qblox/operation_handling/factory.py" = ['PLR0911', 'TCH001']
"quantify_scheduler/backends/qblox/operation_handling/pulses.py" = ['ANN201', 'ANN202', 'ANN204', 'ANN205', 'ARG002', 'E501', 'E713', 'E731', 'TCH001', 'UP006', 'UP007', 'W291', 'W293']
"quantify_scheduler/backends/qblox/operation_handling/virtual.py" = ['ANN201', 'ANN204', 'ARG002', 'I001']
"quantify_scheduler/backends/qblox/operations/control_flow_library.py" = ['F401']
"quantify_scheduler/backends/qblox/qasm_program.py" = ['ANN002', 'ANN003', 'ANN201', 'ANN204', 'ANN205', 'E501', 'F821', 'N803', 'PLR1714', 'TCH001', 'UP006', 'UP007']
"quantify_scheduler/backends/qblox_backend.py" = ['ANN401', 'E501', 'SIM118', 'TCH001', 'UP006', 'UP007', 'W291']
"quantify_scheduler/backends/types/common.py" = ['ANN001', 'ANN003', 'ANN202', 'E501', 'N805', 'TCH001', 'TCH002', 'UP006', 'UP007', 'UP037', 'W291']
"quantify_scheduler/backends/types/qblox.py" = ['ANN001', 'ANN102', 'ANN202', 'ANN204', 'E501', 'N815', 'PLR1714', 'UP006', 'UP007', 'W291']
"quantify_scheduler/backends/types/zhinst.py" = ['ANN001', 'ANN201', 'ANN204', 'ANN205', 'ARG002', 'E501', 'N805', 'N815', 'W291']
"quantify_scheduler/backends/zhinst/helpers.py" = ['ANN001', 'ANN201', 'D417', 'TCH002', 'UP006', 'UP007']
"quantify_scheduler/backends/zhinst/resolvers.py" = ['D100', 'D417', 'TCH002', 'UP006']
"quantify_scheduler/backends/zhinst/seqc_il_generator.py" = ['ANN201', 'D100', 'D417', 'UP004', 'UP006', 'UP007']
"quantify_scheduler/backends/zhinst/settings.py" = ['ANN001', 'ANN102', 'ANN201', 'ANN202', 'ANN204', 'ARG001', 'D417', 'I001', 'PLR0912', 'TCH002', 'UP006', 'UP007']
"quantify_scheduler/backends/zhinst_backend.py" = ['D202', 'D417', 'D419']
"quantify_scheduler/device_under_test/composite_square_edge.py" = ['ANN003', 'ANN204', 'ANN401', 'I001']
"quantify_scheduler/device_under_test/mock_setup.py" = ['ANN001', 'ANN201', 'I001', 'W605']
"quantify_scheduler/device_under_test/nv_element.py" = ['ANN003', 'ANN204', 'ANN401', 'ARG002', 'I001']
"quantify_scheduler/device_under_test/quantum_device.py" = ['ANN102']
"quantify_scheduler/device_under_test/transmon_element.py" = ['ANN003', 'ANN202', 'ANN204', 'ANN401', 'I001', 'SIM118']
"quantify_scheduler/enums.py" = ['ANN204']
"quantify_scheduler/gettables.py" = ['D101', 'D202', 'D213', 'D400', 'D404', 'D405', 'D407', 'D410', 'D411', 'D414', 'D415', 'D417']
"quantify_scheduler/gettables_profiled.py" = ['ANN001', 'ANN002', 'ANN003', 'ANN201', 'ANN202', 'ANN204', 'ARG002', 'D102', 'D404', 'I001']
"quantify_scheduler/helpers/collections.py" = ['ANN001', 'ANN401', 'F401', 'I001', 'SIM102', 'UP006']
"quantify_scheduler/helpers/importers.py" = ['ANN401', 'SIM108']
"quantify_scheduler/helpers/inspect.py" = ['TCH003', 'UP006', 'UP007']
"quantify_scheduler/helpers/mock_instruments.py" = ['ANN202', 'ANN204']
"quantify_scheduler/helpers/validators.py" = ['I001', 'UP032']
"quantify_scheduler/helpers/waveforms.py" = ['ANN202', 'I001', 'SIM118', 'TCH001', 'UP006']
"quantify_scheduler/instrument_coordinator/components/__init__.py" = ['E501']
"quantify_scheduler/instrument_coordinator/components/base.py" = ['ANN401', 'TCH001', 'UP006']
"quantify_scheduler/instrument_coordinator/components/generic.py" = ['ANN001', 'ANN201', 'ANN401', 'ARG002', 'E501', 'TCH001', 'UP006', 'UP007']
"quantify_scheduler/instrument_coordinator/components/qblox.py" = ['ANN001', 'ANN003', 'ANN102', 'ANN202', 'ANN204', 'ANN401', 'ARG002', 'E501', 'F821', 'I001', 'SIM102', 'SIM118', 'TCH001', 'UP006', 'UP007', 'UP015']
"quantify_scheduler/instrument_coordinator/components/zhinst.py" = ['D101', 'D102']
"quantify_scheduler/instrument_coordinator/instrument_coordinator.py" = ['ANN001', 'ANN002', 'ANN003', 'ANN202', 'E501', 'F401', 'SIM118', 'UP006']
"quantify_scheduler/instrument_coordinator/utility.py" = ['ANN001', 'ANN201', 'ANN202', 'ANN401', 'E501', 'E731', 'I001']
"quantify_scheduler/json_utils.py" = ['ANN001', 'ANN002', 'ANN003', 'ANN102', 'ANN201', 'I001', 'UP006', 'UP007']
"quantify_scheduler/operations/acquisition_library.py" = ['ANN002', 'ANN003', 'I001']
"quantify_scheduler/operations/gate_library.py" = ['ANN204', 'E501', 'I001', 'N803', 'PLR5501', 'TCH001', 'TID252', 'UP006', 'UP007', 'W291', 'W293']
"quantify_scheduler/operations/measurement_factories.py" = ['ARG001', 'I001', 'PLR0912', 'TCH002', 'UP006', 'UP007']
"quantify_scheduler/operations/nv_native_library.py" = ['ANN204', 'I001', 'PLR5501', 'TID252']
"quantify_scheduler/operations/operation.py" = ['ANN001', 'ANN102', 'ANN204', 'E501']
"quantify_scheduler/operations/pulse_factories.py" = ['E501', 'I001', 'TCH001']
"quantify_scheduler/operations/pulse_library.py" = ['ANN002', 'ANN003', 'ANN102', 'ANN204', 'ANN206', 'ARG001', 'E501', 'N803', 'SIM108', 'TCH002', 'UP006', 'UP007']
"quantify_scheduler/operations/shared_native_library.py" = ['ANN204']
"quantify_scheduler/operations/stitched_pulse.py" = ['ANN002', 'ANN003', 'ANN201', 'I001']
"quantify_scheduler/resources.py" = ['ANN001', 'ANN102', 'ANN204', 'I001']
"quantify_scheduler/schedules/_visualization/circuit_diagram.py" = ['ANN001', 'ANN003', 'ANN202', 'ARG001', 'I001', 'PLR0912', 'PLR0915', 'TCH002', 'UP006', 'UP007']
"quantify_scheduler/schedules/_visualization/pulse_diagram.py" = ['ANN001', 'ANN003', 'ANN202', 'I001', 'PLR0912', 'PLR0915', 'SIM102', 'SIM118', 'UP006', 'UP007']
"quantify_scheduler/schedules/_visualization/pulse_scheme.py" = ['ANN001', 'ANN002', 'ANN003', 'D417', 'N802', 'SIM108', 'TCH002', 'UP006', 'UP007']
"quantify_scheduler/schedules/schedule.py" = ['ANN102']
"quantify_scheduler/schedules/spectroscopy_schedules.py" = ['E501', 'I001', 'TCH002', 'UP007']
"quantify_scheduler/schedules/timedomain_schedules.py" = ['E501', 'I001', 'N803']
"quantify_scheduler/schedules/trace_schedules.py" = ['I001']
"quantify_scheduler/schedules/verification.py" = ['ANN001', 'ANN202', 'TCH002']
"quantify_scheduler/schemas/examples/device_example_cfgs.py" = ['E501']
"quantify_scheduler/structure/model.py" = ['ANN401', 'F401']
"quantify_scheduler/waveforms.py" = ['ANN001', 'ANN003', 'ANN201', 'E501', 'I001', 'N803', 'UP006', 'UP007', 'UP032']
"tests/conftest.py" = ['F403', 'UP009']
"tests/fixtures/mock_setup.py" = ['I001', 'SIM105']
"tests/fixtures/schedule.py" = ['I001', 'UP006', 'UP007']
"tests/scheduler/backends/graph_backends/standard_schedules.py" = ['I001']
"tests/scheduler/backends/graph_backends/test_device_compile.py" = ['I001']
"tests/scheduler/backends/graph_backends/test_zhinst_backend.py" = ['I001', 'TID252']
"tests/scheduler/backends/qblox/operation_handling/test_acquisitions.py" = ['E501', 'F401', 'F811', 'PLR0915']
"tests/scheduler/backends/qblox/operation_handling/test_pulses.py" = ['ARG002', 'E501', 'E711', 'F401', 'F811', 'I001']
"tests/scheduler/backends/qblox/operation_handling/test_virtual.py" = ['I001']
"tests/scheduler/backends/qblox/test_compiler_abc.py" = ['I001']
"tests/scheduler/backends/qblox/test_gettables_qblox.py" = ['F811']
"tests/scheduler/backends/qblox/test_helpers_qblox.py" = ['N802', 'PLR5501']
"tests/scheduler/backends/test_circuit_to_device.py" = ['E501', 'I001', 'TCH001']
"tests/scheduler/backends/test_graph_compilation.py" = ['ARG001', 'I001', 'N816']
"tests/scheduler/backends/test_qblox_backend.py" = ['ARG001', 'E501', 'F541', 'F821', 'I001', 'SIM118', 'SIM300', 'W291']
"tests/scheduler/backends/test_zhinst_backend.py" = ['ARG001', 'E501', 'F841', 'I001', 'SIM118', 'UP006']
"tests/scheduler/backends/zhinst/test_helpers.py" = ['ARG001']
"tests/scheduler/backends/zhinst/test_settings.py" = ['F401', 'I001', 'PLR0124', 'UP034']
"tests/scheduler/device_under_test/test_composite_square_edge.py" = ['I001', 'PLR1714']
"tests/scheduler/device_under_test/test_nv_element.py" = ['E501', 'I001', 'SIM118', 'TCH002']
"tests/scheduler/device_under_test/test_transmon_element.py" = ['I001']
"tests/scheduler/helpers/test_schedule.py" = ['I001']
"tests/scheduler/helpers/test_waveforms.py" = ['ARG001', 'TCH002', 'UP006']
"tests/scheduler/instrument_coordinator/components/test_generic.py" = ['I001']
"tests/scheduler/instrument_coordinator/components/test_qblox.py" = ['F541', 'I001']
"tests/scheduler/instrument_coordinator/components/test_zhinst.py" = ['ARG001']
"tests/scheduler/instrument_coordinator/test_instrument_coordinator.py" = ['ARG001', 'F401', 'F811', 'I001', 'UP006']
"tests/scheduler/operations/test_measurement_factories.py" = ['I001']
"tests/scheduler/operations/test_pulse_factories.py" = ['I001']
"tests/scheduler/operations/test_stitched_pulse.py" = ['F841']
"tests/scheduler/schedules/test_schedule_plotting.py" = ['I001']
"tests/scheduler/schedules/test_spectroscopy_schedules.py" = ['F401', 'F811', 'I001', 'SIM201', 'TCH001']
"tests/scheduler/schedules/test_timedomain_schedules.py" = ['E501', 'N801', 'SIM118']
"tests/scheduler/schedules/visualization/test_pulse_diagram.py" = ['I001']
"tests/scheduler/structure/test_model.py" = ['E501', 'I001']
"tests/scheduler/test_acquisition_library.py" = ['I001']
"tests/scheduler/test_compilation.py" = ['I001', 'SIM118']
"tests/scheduler/test_corrections.py" = ['ARG001', 'F541', 'I001']
"tests/scheduler/test_gate_library.py" = ['E714', 'F401', 'I001']
"tests/scheduler/test_json_utils.py" = ['I001']
"tests/scheduler/test_pulse_library.py" = ['ARG001']
"tests/scheduler/test_types.py" = ['F401', 'I001']
"tests/scheduler/test_waveforms.py" = ['I001']
"tests/test_headers_and_copyright.py" = ['UP015', 'UP032']

[tool.ruff.lint.isort]
known-first-party = ["quantify_core", "quantify_scheduler"]
[tool.pyright]
exclude = [
    "docs",
    "setup.py",
    # All files below are temporarily excluded explicitly and expected to be gradually turned into pyright-compliancy
    "quantify_scheduler/compilation.py",
    "quantify_scheduler/gettables_profiled.py",
    "quantify_scheduler/json_utils.py",
    "quantify_scheduler/backends/circuit_to_device.py",
    "quantify_scheduler/backends/corrections.py",
    "quantify_scheduler/backends/graph_compilation.py",
    "quantify_scheduler/backends/qblox_backend.py",
    "quantify_scheduler/backends/zhinst_backend.py",
    "quantify_scheduler/backends/qblox/compiler_abc.py",
    "quantify_scheduler/backends/qblox/driver_version_check.py",
    "quantify_scheduler/backends/qblox/helpers.py",
    "quantify_scheduler/backends/qblox/instrument_compilers.py",
    "quantify_scheduler/backends/qblox/qasm_program.py",
    "quantify_scheduler/backends/qblox/operation_handling/pulses.py",
    "quantify_scheduler/backends/qblox/operation_handling/virtual.py",
    "quantify_scheduler/backends/types/common.py",
    "quantify_scheduler/backends/types/qblox.py",
    "quantify_scheduler/backends/types/zhinst.py",
    "quantify_scheduler/backends/zhinst/helpers.py",
    "quantify_scheduler/backends/zhinst/seqc_il_generator.py",
    "quantify_scheduler/backends/zhinst/settings.py",
    "quantify_scheduler/device_under_test/composite_square_edge.py",
    "quantify_scheduler/device_under_test/device_element.py",
    "quantify_scheduler/device_under_test/edge.py",
    "quantify_scheduler/device_under_test/mock_setup.py",
    "quantify_scheduler/device_under_test/quantum_device.py",
    "quantify_scheduler/helpers/collections.py",
    "quantify_scheduler/helpers/inspect.py",
    "quantify_scheduler/helpers/mock_instruments.py",
    "quantify_scheduler/helpers/schedule.py",
    "quantify_scheduler/helpers/validators.py",
    "quantify_scheduler/helpers/waveforms.py",
    "quantify_scheduler/instrument_coordinator/instrument_coordinator.py",
    "quantify_scheduler/instrument_coordinator/utility.py",
    "quantify_scheduler/instrument_coordinator/components/generic.py",
    "quantify_scheduler/instrument_coordinator/components/qblox.py",
    "quantify_scheduler/instrument_coordinator/components/zhinst.py",
    "quantify_scheduler/operations/acquisition_library.py",
    "quantify_scheduler/operations/gate_library.py",
    "quantify_scheduler/operations/measurement_factories.py",
    "quantify_scheduler/operations/nv_native_library.py",
    "quantify_scheduler/operations/pulse_factories.py",
    "quantify_scheduler/operations/pulse_library.py",
    "quantify_scheduler/schedules/schedule.py",
    "quantify_scheduler/schedules/timedomain_schedules.py",
    "quantify_scheduler/schedules/trace_schedules.py",
    "quantify_scheduler/schedules/verification.py",
    "quantify_scheduler/schedules/_visualization/circuit_diagram.py",
    "quantify_scheduler/schedules/_visualization/pulse_diagram.py",
    "quantify_scheduler/schedules/_visualization/pulse_scheme.py",
    "tests/fixtures/mock_setup.py",
    "tests/scheduler/test_compilation.py",
    "tests/scheduler/test_corrections.py",
    "tests/scheduler/test_gate_library.py",
    "tests/scheduler/test_gettables.py",
    "tests/scheduler/test_json_utils.py",
    "tests/scheduler/test_pulse_library.py",
    "tests/scheduler/test_types.py",
    "tests/scheduler/backends/test_circuit_to_device.py",
    "tests/scheduler/backends/test_graph_compilation.py",
    "tests/scheduler/backends/test_qblox_backend.py",
    "tests/scheduler/backends/test_zhinst_backend.py",
    "tests/scheduler/backends/graph_backends/test_qblox_backend.py",
    "tests/scheduler/backends/qblox/test_driver_version_check.py",
    "tests/scheduler/backends/qblox/test_helpers_qblox.py",
    "tests/scheduler/backends/qblox/operation_handling/test_acquisitions.py",
    "tests/scheduler/backends/qblox/operation_handling/test_virtual.py",
    "tests/scheduler/backends/zhinst/test_helpers.py",
    "tests/scheduler/backends/zhinst/test_resolvers.py",
    "tests/scheduler/backends/zhinst/test_seqc_il_generator.py",
    "tests/scheduler/backends/zhinst/test_settings.py",
    "tests/scheduler/device_under_test/test_composite_square_edge.py",
    "tests/scheduler/device_under_test/test_nv_element.py",
    "tests/scheduler/device_under_test/test_transmon_element.py",
    "tests/scheduler/helpers/test_schedule.py",
    "tests/scheduler/helpers/test_waveforms.py",
    "tests/scheduler/instrument_coordinator/test_instrument_coordinator.py",
    "tests/scheduler/instrument_coordinator/test_utility.py",
    "tests/scheduler/instrument_coordinator/components/test_qblox.py",
    "tests/scheduler/instrument_coordinator/components/test_zhinst.py",
    "tests/scheduler/schedules/compiles_all_backends.py",
    "tests/scheduler/schedules/test_schedule_plotting.py",
    "tests/scheduler/schedules/test_spectroscopy_schedules.py",
    "tests/scheduler/schedules/test_timedomain_schedules.py",
    "tests/scheduler/schedules/visualization/test_pulse_scheme.py",
    "tests/scheduler/structure/test_model.py",
]
